--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,4 +1,5 @@
 name: Django CI
+
 on:
   push:
     branches: [ "main" ]
@@ -7,8 +8,12 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    
+    env:
+      SECRET_KEY: ${{ secrets.SECRET_KEY }}
+      API_KEY: ${{ secrets.API_KEY }}  
+      
     strategy:
       max-parallel: 4
       matrix:
@@ -20,11 +25,14 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libldap2-dev libsasl2-dev
     - name: Install Dependencies
       run: |
-       sudo apt-get install -y libldap2-dev libsasl2-dev
-       python -m pip install --upgrade pip
-       pip install -r requirements.txt
+        python -m pip install --upgrade pip
+        pip install --no-cache-dir -r requirements.txt
     - name: Run Tests
       run: |
         python manage.py test
