--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -12,7 +12,10 @@ jobs:
     
     env:
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
-      API_KEY: ${{ secrets.API_KEY }}  
+      API_KEY: ${{ secrets.API_KEY }}
+      NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
+      WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }}
+      WEATHER_API_KEY_2: ${{ secrets.WEATHER_API_KEY_2 }}
       
     strategy:
       max-parallel: 4
@@ -35,4 +38,5 @@ jobs:
         pip install --no-cache-dir -r requirements.txt
     - name: Run Tests
       run: |
+        cd backend  
         python manage.py test
