--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -36,6 +36,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install --no-cache-dir -r requirements.txt
+    - name: Collect static files
+      run: python manage.py collectstatic --no-input
     - name: Run Tests
       run: |
         cd backend  
