--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,11 @@
 {
   "name": "frontend",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node --loader ts-node/esm dev.ts",
+    "build": "esbuild src/index.tsx --bundle --outfile=dist/main.js --loader:.tsx=tsx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,11 +13,24 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/http-proxy-middleware": "^1.0.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "autoprefixer": "^10.4.20",
+    "esbuild": "^0.25.12",
+    "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.5",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-textshadow": "^2.1.3"
   }
