--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,9 @@
     "start": "npm run dev",
     "dev": "concurrently \"npm:watch:css\" \"npm:watch:js\" \"node --loader ts-node/esm dev.ts\"",
     "watch:css": "tailwindcss -i ./src/input.css -o ./public/css/output.css --watch",
-    "watch:js": "esbuild src/index.tsx --bundle --outfile=dist/main.js --loader:.tsx=tsx --watch",
+    "watch:js": "esbuild src/index.tsx --bundle --outfile=dist/main.js --loader:.tsx=tsx --loader:.png=dataurl --watch",
     "build:css": "tailwindcss -i ./src/input.css -o ./public/css/output.css",
-    "build": "esbuild src/index.tsx --bundle --outfile=dist/main.js --loader:.tsx=tsx",
+    "build": "esbuild src/index.tsx --bundle --outfile=dist/main.js --loader:.tsx=tsx --loader:.png=dataurl",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,8 +19,9 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/http-proxy-middleware": "^1.0.0",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@types/leaflet": "^1.9.12",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^8.2.2",
     "esbuild": "^0.25.12",
@@ -32,12 +33,11 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@tsparticles/engine": "^3.9.1",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.9.1",
     "axios": "^1.13.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "leaflet": "^1.9.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.9.5",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-textshadow": "^2.1.3"
